Bug 447643 - If you press the hotkey to call Transform tool during the selection with Outline selection tool, transformation affects entire layer, and not selected area.
Summary: If you press the hotkey to call Transform tool during the selection with Outl...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools/Selection (other bugs)
Version First Reported In: 5.0.0
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-12-29 14:23 UTC by rybak77.lol
Modified: 2022-01-05 14:19 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Observed result (241.59 KB, video/mp4)
2021-12-29 14:23 UTC, rybak77.lol
Details

Note You need to log in before you can comment on or make changes to this bug.
Description rybak77.lol 2021-12-29 14:23:08 UTC
Created attachment 144936 [details]
Observed result

STEPS TO REPRODUCE
1. Choose Outline selection tool.
2. Press the left mouse button and select an area on the image.
3. Without releasing the left mouse button, press the hotkey that corresponds to the Transform tool.

OBSERVED RESULT
Transformation applies to the layer as a whole, not to the selected area.

EXPECTED RESULT
I would expect two possible behaviors:
1. The hotkey for calling the Transform tool does not work when selecting.
2. The selection automatically encloses when you press the hotkey to call the Transform tool during selection.

SOFTWARE/OS VERSIONS
Krita
  Version: 5.0.0
Qt
  Version (compiled): 5.12.12
  Version (loaded): 5.12.12
OS Information
  Build ABI: x86_64-little_endian-llp64
  Build CPU: x86_64
  CPU: x86_64
  Kernel Type: winnt
  Kernel Version: 10.0.17763
  Pretty Productname: Windows 10 (10.0)
  Product Type: windows
  Product Version: 10
Comment 1 Ahab Greybeard 2021-12-29 21:31:10 UTC
I can Confirm this for the 5.0.0 appimage on Debian 10 

I think that the 'Freehand Selection Tool' is meant.

With the Rectangular and Elliptical Selection Tools, pressing Ctrl+T before a selection is completed does complete the selection but does not activate the Transform tool.

With the Polygonal and Freehand Selection tools, the part made selection is abandoned in favour of any pre-existing selection, or the entire layer content if no pre-existing selection, then the Transform tool is activated.
Comment 2 Dmitry Kazakov 2022-01-05 14:19:02 UTC
Git commit 66f7dce492412e06407ebb0e1a9e6cd9386efdd2 by Dmitry Kazakov.
Committed on 05/01/2022 at 14:18.
Pushed by dkazakov into branch 'master'.

Fix finishing of outline selection tool on deactivation

Control modifier of the transform tool shortcut enables continued
mode of the outline tool, so it cannot be completed via a normal
procedure.

M  +8    -3    plugins/tools/selectiontools/kis_tool_select_outline.cc

https://invent.kde.org/graphics/krita/commit/66f7dce492412e06407ebb0e1a9e6cd9386efdd2
Comment 3 Dmitry Kazakov 2022-01-05 14:19:39 UTC
Git commit bf80a03e097c2decb9ac9ce4890923b06412bd34 by Dmitry Kazakov.
Committed on 05/01/2022 at 14:19.
Pushed by dkazakov into branch 'krita/5.0'.

Fix finishing of outline selection tool on deactivation

Control modifier of the transform tool shortcut enables continued
mode of the outline tool, so it cannot be completed via a normal
procedure.
(cherry picked from commit 66f7dce492412e06407ebb0e1a9e6cd9386efdd2)

M  +8    -3    plugins/tools/selectiontools/kis_tool_select_outline.cc

https://invent.kde.org/graphics/krita/commit/bf80a03e097c2decb9ac9ce4890923b06412bd34