Fix finishing of outline selection tool on deactivation

Control modifier of the transform tool shortcut enables continued
mode of the outline tool, so it cannot be completed via a normal
procedure.

BUG:447643
(cherry picked from commit 66f7dce492412e06407ebb0e1a9e6cd9386efdd2)